<?xml version="1.0"?>

<package format="2">
  <name>mars</name>
  <version>0.0.1</version>
  <description>
    MARS (Microphone Array Real-time System) is a system that provides sound source
    localization and tracking, optimized for real-time processing on low-cost hardware.
  </description>
  <maintainer email="francois.michaud@usherbrooke.ca">
    IntRoLab at Université de Sherbrooke
  </maintainer>
  <license>GNU 3.0</license>

  <url>https://github.com/introlab/mars</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libfftw3-dev</build_depend>
  <build_depend>libasound2-dev</build_depend>
  <build_depend>libconfig++-dev</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
